--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^5.9.2",
-    "googleapis": "^47.0.0",
+    "googleapis": "^39.2.0",
     "mongoose": "^5.8.11",
+    "nodemon": "^2.0.2",
     "request": "^2.88.0"
   }
 }
