--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ DB_PASS=zb7fqzb7fq
 
 google_client_id=679551707407-a8fcfgmlkaobbsbm8t26i6pnjbo4sc9t.apps.googleusercontent.com
 google_client_secret=llRs7bXTiwx0kksZlguHr0GY
-google_client_redirect=https://musicstar.herokuapp.com/login/gCallback
+//google_client_redirect=https://musicstar.herokuapp.com/login/gCallback
+google_client_redirect=http://localhost:3000/login/gCallback
 google_api_key=AIzaSyBKGmn-Bh4XbFTqe5FglIzjIZQDHikJvuo
 
 
