--- a/.env
+++ b/.env
@@ -4,11 +4,12 @@ DB_PASS=zb7fqzb7fq
 
 google_client_id=679551707407-a8fcfgmlkaobbsbm8t26i6pnjbo4sc9t.apps.googleusercontent.com
 google_client_secret=llRs7bXTiwx0kksZlguHr0GY
-google_client_redirect=https://musicstar.herokuapp.com/login/gCallback
+//google_client_redirect=https://musicstar.herokuapp.com/login/gCallback
+google_client_redirect=http://localhost:8080/login/gCallback
 google_api_key=AIzaSyBKGmn-Bh4XbFTqe5FglIzjIZQDHikJvuo
 
 
 spotify_client_id=4a443ae244a346909958967f11de7f8b
 spotify_client_secret=55d5579cbeea4c508196bec5a511ad5d
 
-PORT=3000
+PORT=8080
